// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailVerification /> should render correctly - index 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
  width: 2.375rem;
  height: 2.375rem;
}

.c5 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c6 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c7 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c8 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c9 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      />
      <div
        class="c6"
      />
      <div
        class="c7"
      />
      <div
        class="c8"
      />
      <div
        class="c9"
      />
      <div
        class="c10"
      />
      <div
        class="c11"
      />
      <div
        class="c12"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with initial state 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
  width: 2.375rem;
  height: 2.375rem;
}

.c5 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c6 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c7 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c8 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c9 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      />
      <div
        class="c6"
      />
      <div
        class="c7"
      />
      <div
        class="c8"
      />
      <div
        class="c9"
      />
      <div
        class="c10"
      />
      <div
        class="c11"
      />
      <div
        class="c12"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with user 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c4 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c4:first-of-type {
  margin-top: 0.86rem;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
  width: 2.375rem;
  height: 2.375rem;
}

.c6 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c7 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c8 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c9 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c13 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c5 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Email confirmed
      </h1>
    </div>
    <span
      class="c4"
    >
      Thank you for confirming your email address
    </span>
    <div
      class="c5"
    >
      <div
        class="c6"
      />
      <div
        class="c7"
      />
      <div
        class="c8"
      />
      <div
        class="c9"
      />
      <div
        class="c10"
      />
      <div
        class="c11"
      />
      <div
        class="c12"
      />
      <div
        class="c13"
      />
    </div>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifyError 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c13 {
  display: inline-block;
  margin-bottom: 0;
  padding-bottom: 0;
  line-height: 1.5;
  margin-top: 2rem;
}

.c13:first-of-type {
  margin-top: 0.86rem;
}

.c14 {
  color: #E02626;
  fill: #E02626;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
  width: 2.375rem;
  height: 2.375rem;
}

.c5 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c6 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c7 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c8 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c9 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

@media (prefers-color-scheme:dark) {
  .c14 {
    color: #CA2020;
    fill: #CA2020;
  }
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      />
      <div
        class="c6"
      />
      <div
        class="c7"
      />
      <div
        class="c8"
      />
      <div
        class="c9"
      />
      <div
        class="c10"
      />
      <div
        class="c11"
      />
      <div
        class="c12"
      />
    </div>
    <span
      class="c13"
    >
      <span
        class="c14"
      >
        Something went wrong whilst confirming your email
        <br />
        Invalid verification link
      </span>
    </span>
  </div>
</div>
`;

exports[`<EmailVerification /> should render correctly with verifying=true 1`] = `
.c2 {
  margin: 0;
  font-size: 2.4rem;
  font-weight: bold;
}

.c3 {
  margin: 2.3rem 0 0 0;
}

.c1 {
  -webkit-animation: bbwGtI 0.4s ease-in-out;
  animation: bbwGtI 0.4s ease-in-out;
}

.c0 {
  display: block;
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  overflow: hidden;
  padding-bottom: 2rem;
  max-width: 60rem;
  padding-right: 1rem;
  padding-left: 1rem;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1.125rem;
  height: 1.125rem;
  color: #1e1e1e;
  width: 2.375rem;
  height: 2.375rem;
}

.c5 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-animation-delay: -0.15000000000000002s;
  animation-delay: -0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c6 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-animation-delay: -0.05000000000000002s;
  animation-delay: -0.05000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c7 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-animation-delay: 0.04999999999999999s;
  animation-delay: 0.04999999999999999s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c8 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-animation-delay: 0.15000000000000002s;
  animation-delay: 0.15000000000000002s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c9 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  -webkit-animation-delay: 0.25s;
  animation-delay: 0.25s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c10 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(225deg);
  -ms-transform: rotate(225deg);
  transform: rotate(225deg);
  -webkit-animation-delay: 0.35s;
  animation-delay: 0.35s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c11 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  -webkit-animation-delay: 0.45000000000000007s;
  animation-delay: 0.45000000000000007s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

.c12 {
  position: absolute;
  bottom: 0.05rem;
  left: 0.5rem;
  width: 0.13rem;
  height: 0.3rem;
  border-radius: 1rem;
  background-color: transparent;
  background-color: currentColor;
  -webkit-animation: fzQzkt 0.8s infinite linear;
  animation: fzQzkt 0.8s infinite linear;
  -webkit-transform-origin: center -0.16rem;
  -ms-transform-origin: center -0.16rem;
  transform-origin: center -0.16rem;
  -webkit-transform: rotate(315deg);
  -ms-transform: rotate(315deg);
  transform: rotate(315deg);
  -webkit-animation-delay: 0.55s;
  animation-delay: 0.55s;
  bottom: 0.1rem;
  left: 1.05rem;
  width: 0.25rem;
  height: 0.8rem;
  -webkit-transform-origin: center -0.34em;
  -ms-transform-origin: center -0.34em;
  transform-origin: center -0.34em;
}

@media (min-width:50.25rem) {
  .c0 {
    padding-right: 2rem;
    padding-left: 2rem;
  }
}

@media (prefers-color-scheme:dark) {
  .c4 {
    color: white;
  }
}

<div>
  <div
    class="c0 page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="c1"
    >
      <h1
        class="c2 c3"
      >
        Confirming email
      </h1>
    </div>
    <div
      class="c4"
    >
      <div
        class="c5"
      />
      <div
        class="c6"
      />
      <div
        class="c7"
      />
      <div
        class="c8"
      />
      <div
        class="c9"
      />
      <div
        class="c10"
      />
      <div
        class="c11"
      />
      <div
        class="c12"
      />
    </div>
  </div>
</div>
`;
